# AkhileshSR

./: .gitattributes  README.md  pyproject.toml
pp50.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python-productivity-50/: LICENSE  README.md
python-productivity-50/tool01-folder-organizer/: README.md  folder_organizer.py
python-productivity-50/tool02-duplicate-finder/: README.md  duplicate_finder.py
python-productivity-50/tool03-smart-renamer/: README.md  smart_renamer.py
python-productivity-50/tool04-pdf-tool/: README.md  pdf_tool.py
python-productivity-50/tool05-disk-usage-report/: README.md  disk_usage_report.py
python-productivity-50/tool06-log-summarizer/: README.md  log_summarizer.py
python-productivity-50/tool07-daily-planner/: README.md  daily_planner.py
python-productivity-50/tool08-time-tracker/: README.md  time_tracker.py
python-productivity-50/tool09-pomodoro/: README.md  pomodoro.py
python-productivity-50/tool10-image-resizer/: README.md  image_resizer.py
python-productivity-50/tool11/: README.md
python-productivity-50/tool14/: README.md
python-productivity-50/tool15/: README.md
python-productivity-50/tool16/: README.md
python-productivity-50/tool17/: README.md
python-productivity-50/tool18/: README.md
python-productivity-50/tool19/: README.md
python-productivity-50/tool20/: README.md
python-productivity-50/tool21/: README.md
python-productivity-50/tool24/: README.md
python-productivity-50/tool28/: README.md
python_productivity_50/: cli.py  requirements.txt
(+38 files in other folders)
